force-app/main/default/objects/Distress_Setting__c/Distress_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Distress Setting</label>
</CustomObject>