force-app/main/default/objects/Distress_Setting__c/fields/Attachment_Size__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Size__c</fullName>
    <label>Attachment Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>