force-app/main/default/objects/Distress_Setting__c/fields/Distressed_Task_Eligible_Objects__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Task_Eligible_Objects__c</fullName>
    <description>Distressed Task Eligible Objects</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Distressed Task Eligible Objects</label>
    <length>100</length>
    <type>Text</type>
</CustomField>