force-app/main/default/objects/Distress_Setting__c/fields/Run_Placement_History_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Placement_History_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Placement History Trigger</label>
    <type>Checkbox</type>
</CustomField>